@@ -1,3 +1,8 @@
+2002-02-12  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* gas/hppa/reloc/reloc.exp (labelopbug.s): Change test to suit
+	hppa_fix_adjustable change.
+
 2002-02-09  Richard Henderson  <rth@redhat.com>
 
 	* gas/alpha/elf-reloc-5.s, gas/alpha/elf-reloc-5.d: New.
